# test_cmake_project

./: .travis.yml  CMakeLists.txt  module.cpp  module.h
test/: test_lib.cpp
